Processing Results and Making the API call

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,11 +12,13 @@
 
 <body>
 
-
-  </div>
-  <!-- Popular movie -->
-  <h3> Today's News</h3>
-
+  <!-- Popular movie section  -->
+  <h3> Update News</h3>
+  <ul>
+    {% for popular_movie in popular %}
+    <li>{{ popular_movie.title}}</li>
+    {% endfor %}
+  </ul>
 </body>
 
 </html>
