able to seee the sources-list

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,11 +12,11 @@
 
 <body>
 
-  <!-- Popular movie section  -->
+  <!-- Popular news section  -->
   <h3> Update News</h3>
   <ul>
-    {% for popular_movie in popular %}
-    <li>{{ popular_movie.title}}</li>
+    {% for general_news in general %}
+    <li>{{ general_news.id}}</li>
     {% endfor %}
   </ul>
 </body>
