--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,17 +8,33 @@
   {% else %}
   <title>Queens News Review Website Online</title>
   {% endif %}
+
+  {% extends 'base.html'%}
+  {% import 'macros.html' as macro%}
 </head>
 
 <body>
+  <!-- Content block -->
+  {% block content %}
+  <div class="container">
 
-  <!-- Popular news section  -->
-  <h3> Update News</h3>
-  <ul>
-    {% for general_news in general %}
-    <li>{{ general_news.id}}</li>
-    {% endfor %}
-  </ul>
+    <!-- Poster background -->
+    <div class="row">
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 posterPath" style="background: url({{news.url}}) no-repeat center center">
+      </div>
+
+      <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 movie-details">
+        <h3>{{ news.name }}</h3>
+        <p class="url"> <b> {{ news.url }}</p>
+        <p class="description"> {{ news.description }}</p>
+        <p class="category">{{ news.category}}</p>
+        <p class="language">{{news.language}}</p>
+        <p class="country">{{news.country}}</p>
+      </div>
+    </div>
+
+  </div>
+  {% endblock %}
 </body>
 
 </html>
