--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,13 +9,13 @@
 <ul>
   {{ macro.displaySourceList(general)}}
 </ul>
-<h3> Best website of News</h3>
+<h3> Best website of Sports News</h3>
 <ul>
-  {{ macro.displaySourceList(sports)}}
+  {{ macro.displaySourceList(sport)}}
 </ul>
-<h3> Best website of News</h3>
+<h3> Best website of Finances News</h3>
 <ul>
-  {{ macro.displaySourceList(finances)}}
+  {{ macro.displaySourceList(finance)}}
 </ul>
 
 {%endblock%}
