i created article class two

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,17 +5,14 @@
 
 
 {% block content %}
-<h3> Best website of News</h3>
+<h3>Best website News</h3>
 <ul>
   {{ macro.displaySourceList(general)}}
 </ul>
-<h3> Best website of Sports News</h3>
+
+<h3> entertainment News</h3>
 <ul>
-  {{ macro.displaySourceList(sport)}}
-</ul>
-<h3> Best website of Finances News</h3>
-<ul>
-  {{ macro.displaySourceList(finance)}}
+  {{ macro.displaySourceList(entertainment)}}
 </ul>
 
 {%endblock%}
