--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -2,15 +2,20 @@
 
 {% for news_sources in news_list %}
 <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <li class="text-center">
+        <a href="/news_sources/{{news_sources.id}}">
+          {{ news_sources.id|truncate(10)}}</a>
+      </li>
+    </div>
+    <p>{{ news_sources.description }}</p>
+    <div class="panel-heading">
+      <p>News {{ news_sources.language }} category.</p>
+      <p class="uppercase">Language {{ news_sources.country.uppercase }} </p>
 
-  <li class="text-center">
-    <a href="/news_sources/{{news_sources.id}}">
-      {{ news_sources.name|truncate(10)}}</a>
-  </li>
-  <p>{{ news_sources.description }}</p>
-  <p>{{ news_sources.language }}</p>
-  <p>{{ news_sources.country }}</p>
+    </div>
+  </div>
 </div>
-
 {% endfor %}
 {% endmacro %}
