able to display articles with images and description

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -10,9 +10,9 @@
       </li>
     </div>
     <p>{{ news_sources.description }}</p>
+    <p>News {{ news_sources.language }} category.</p>
     <div class="panel-heading">
-      <p>News {{ news_sources.language }} category.</p>
-      <p class="uppercase">Language {{ news_sources.country.uppercase }} </p>
+      <p class="uppercase"> {{ news_sources.country }} </p>
 
     </div>
   </div>
