--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,31 +1,21 @@
 {% extends 'base.html'%}
 <!-- Content block -->
 {% block content %}
-{% for news_articles in news_list %}
-
-<div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12 heading">
-      <h1> {{name}} </h1>
-    </div>
-  </div>
-  <div class="row">
-    {% for article in news %}
-    <div class="col-md-3 articles-details">
-      <a href={{news_articles.url}} target="_blank">
-        <img src={{news_articles.urlToImage}} alt="IMAGE LOADING...">
-      </a>
-      <div class="words">
-        <h4 class="text-bold"> {{news_articles.title}} </h4>
-        <p class="small">- {{news_articles.author}} </p>
-        <p class="small">Posted on {{news_articles.publishedAt}}</p>
-        <hr>
-        <p> {{news_articles.description}}...
-          <a href={{news_articles.url}} target="_blank">Read More</a>
-        </p>
-      </div>
-    </div>
-    {% endfor %}
+{% for article in news %}
+<div class="col-md-3 articles-details">
+  <a href={{article.url}} target="_blank">
+    <img src={{article.urlToImage}} alt="IMAGE LOADING..." height='240'>
+  </a>
+  <div class="words">
+    <h4 class="text-bold"> {{article.title}} </h4>
+    <p class="small">- {{article.author}} </p>
+    <p class="small">Posted on {{article.publishedAt}}</p>
+    <hr>
+    <p> {{article.description}}...
+      <a href={{article.url}} target="_blank">Read More</a>
+    </p>
   </div>
 </div>
+{% endfor %}
+
 {% endblock %}
