--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,13 +12,16 @@
 
 <body>
   {% extends 'bootstrap/base.html'%}
+  <!-- Styles block -->
+
+  {% block styles%}
+  {{ super() }}
+  <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}">
+  {% endblock %}
   <!-- Navbar block  -->
   {% block navbar %}
   {% include 'navbar.html' %}
   {% endblock %}
-  <!-- Content block -->
-
-
 </body>
 
 </html>
