--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,6 +1,6 @@
 {% macro displaySourceList(news_list) %}
 
-{% for news_sources in news %}
+{% for news_sources in news_list %}
 <div class="col-xs-12 col-sm-4 col-md-2 col-lg-2 movie-card">
   <div class="panel panel-info">
     <div class="panel-heading">
