--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,19 +1,22 @@
 {% extends 'base.html'%}
+
 <!-- Content block -->
 {% block content %}
 {% for article in news %}
-<div class="col-md-3 articles-details">
-  <a href={{article.url}} target="_blank">
-    <img src={{article.urlToImage}} alt="IMAGE LOADING..." height='240'>
-  </a>
-  <div class="words">
-    <h4 class="text-bold"> {{article.title}} </h4>
-    <p class="small">- {{article.author}} </p>
-    <p class="small">Posted on {{article.publishedAt}}</p>
-    <hr>
-    <p> {{article.description}}...
-      <a href={{article.url}} target="_blank">Read More</a>
-    </p>
+<div class="container">
+  <div class="col-md-3 articles-details">
+    <a href={{article.url}} target="_blank">
+      <img src={{article.urlToImage}} alt="IMAGE LOADING..." height='240'>
+    </a>
+    <div class="words">
+      <h4 class="text-bold"> {{article.title}} </h4>
+      <p class="small">- {{article.author}} </p>
+      <p class="small">Posted on {{article.publishedAt}}</p>
+      <hr>
+      <p> {{article.description}}...
+        <a href={{article.url}} target="_blank">Read More</a>
+      </p>
+    </div>
   </div>
 </div>
 {% endfor %}
