--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,14 +1,20 @@
 {% extends 'base.html'%}
 {% import 'macros.html' as macro%}
-
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='index.css')}}">
+{% endblock %}
 <!-- Content block -->
 {% block content %}
+<div class="header">
+  <h1>News Highlight</h1>
+</div>
 <h3>Best website News</h3>
 <ul>
   {{ macro.displaySourceList(general)}}
 </ul>
 
-<h3> entertainment News</h3>
+<h3> Entertainment News</h3>
 <ul>
   {{ macro.displaySourceList(entertainment)}}
 </ul>
