styling images and description

--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -9,8 +9,8 @@
           {{ news_sources.id|truncate(10)}}</a>
       </li>
     </div>
-    <p>{{ news_sources.description }}</p>
-    <p>News {{ news_sources.language }} category.</p>
+    <p class="description">{{ news_sources.description }}</p>
+    <p class="language">News {{ news_sources.language }} category.</p>
     <div class="panel-heading">
       <p class="country"> {{ news_sources.country }} </p>
 
