--- a/app/static/index.css
+++ b/app/static/index.css
@@ -32,16 +32,12 @@ h3 {
   width: 1200px;
   margin: 0 auto;
 }
-/* .words{
+.words{
   background-color: azure;
   width:600px;
   margin-left: auto;
   margin-right: auto;
-} */
-.image-wrapper{
-  float:left;
-  width: 25%;
-  padding-left: 20px;
+  font-size: 20px;
 }
 
 .header {
@@ -58,5 +54,5 @@ h3 {
   text-transform: uppercase;
 }  
 .description{
-  padding: 3px;
+  padding: 10px;
 }
