--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -1,12 +1,15 @@
 {% extends 'base.html'%}
-
+{% block styles%}
+{{ super() }}
+<link rel="stylesheet" href="{{url_for('static',filename='index.css')}}">
+{% endblock %}
 <!-- Content block -->
 {% block content %}
 {% for article in news %}
 <div class="container">
   <div class="col-md-6 articles-details">
     <a href={{article.url}} target="_blank">
-      <img src={{article.urlToImage}} alt="IMAGE LOADING..." height='300px'>
+      <img src={{article.urlToImage}} alt="IMAGE LOADING..." height='300px' width='600px'>
     </a>
     <div class="words">
       <h4 class="text-bold"> {{article.title}} </h4>
